[package]
name = "rns"
version = "0.10.0"
edition = "2021"
description = "Network scanning tool written in Rust"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
arp-toolkit = {version = "0.3.2", features = ["sync"]}
sysutil = "0.5.4"
rsjson = "0.5.1"
icmp = "0.3.0"